<resources>
    <string name="app_name">FormZilla</string>
    <string name="available_forms">Доступные опросы</string>
    <string name="enter_login_and_password">Введите\nлогин и пароль</string>
    <string name="enter_login_and_password_subscription">Чтобы участвовать\nв опросах</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="next">Продолжить</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_name">Название опроса</string>
    <string name="enter_question_name">Введите текст вопроса</string>
    <string name="enter_question_answer">Введите текст ответа</string>
    <string name="free_answer">Свободный ответ</string>
    <string name="add_answer">Добавить ответ</string>
    <string name="settings">Параметры</string>
    <string name="create_filter_by_answer">Создание фильтра по ответу</string>
    <string name="multiple_answer">Множественный ответ</string>
    <string name="done">Готово</string>
    <string name="add_question">Добавить вопрос</string>
    <string name="enterName">Введите название...</string>
    <string name="newForm">Новый опрос</string>
    <string name="Next">Далее</string>
    <string name="enter_filter_category">Введите категорию фильтра</string>
    <string name="error">Ошибка!</string>
    <string name="next_button_menu">next_button</string>
    <string name="enter_form_name">Придумайте название опроса</string>
    <string name="new_employee">Новый сотрудник</string>
    <string name="last_name">Фамилия:</string>
    <string name="first_name">Имя:</string>
    <string name="position">Должность:</string>
    <string name="email">E-Mail:</string>
    <string name="terms_of_use"><u>Пользовательское соглашение</u></string>
    <string name="you_accept">Регистрируясь, вы принимаете условия</string>
    <string name="company_name">Название\nкомпании:</string>
    <string name="enter_answer">Введите ответ...</string>
    <string name="passed_forms">Пройденные опросы</string>
    <string name="created_forms">Созданные опросы</string>
    <string name="staff">Сотрудники</string>
    <string name="create_form">Создать опрос</string>
    <string name="reiteration">Повторение</string>
    <string name="field_cant_be_empty">Поле не должно быть пустым</string>
    <string name="anonymous_mod">Анонимный режим</string>
    <string name="add_filters">Добавить фильтры</string>
    <string name="login_">Логин:</string>
    <string name="password_">Пароль:</string>
    <string name="log_out">Выйти</string>
</resources>