<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/availableForms"
            android:checked="true"
            android:icon="@drawable/outline_bar_chart_24"
            android:title="@string/available_forms" />
        <item
            android:id="@+id/passedForms"
            android:icon="@drawable/baseline_done_24"
            android:title="@string/completed_forms" />
        <item
            android:id="@+id/createdForms"
            android:icon="@drawable/outline_person_24"
            android:title="@string/created_forms" />
        <item
            android:id="@+id/staff"
            android:icon="@drawable/outline_groups_24"
            android:title="@string/staff" />
        <item
            android:id="@+id/create_form"
            android:icon="@drawable/outline_create_24"
            android:title="@string/create_form" />
    </group>
</menu>